tests/modules/success/0020-module-alias.ec
type t.

module M = {
  var x : t
}.

module N = M.
