tests/modules/fail/0002-module-invalid-var-type.ec
type t.
type u.

module type I = {
  var x : t
}.

module M : I = {
  var x : u
}.
